syntax = "proto3";
package Shop.Application.DTOs.Api;

option csharp_namespace = "Parstech.Shop.Shared.Protos.Torob";

service TorobService {
  rpc GetTorobProduct (TorobRequest) returns (Torob) {}
}

message TorobRequest {
  int32 store_id = 1;
  string base_url = 2;
}

message TorobProduct {
  string name = 1;
  int32 id = 2;
  int32 product_id = 3;
  int64 sale_price = 4;
  int64 discount_price = 5;
  int32 quantity = 6;
  int32 type_id = 7;
  optional int32 parent_id = 8;
  string short_link = 9;
  optional string discount_date = 10;
  string short_description = 11;
}

message Torob {
  string product_id = 1;
  string page_url = 2;
  string price = 3;
  string availability = 4;
  string old_price = 5;
  string image = 6;
  string content = 7;
  string name = 8;
}
